# seal-the-deal.rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LICENSE-ZLIB  README.md  cargo_publish.sh
.cargo/: config.toml
.github/workflows/: CI.yml  future-proof.yml
src/: _lib.rs  compile_fail_tests.md
src/examples/: airtight.rs  airtight_disguised.rs  basic.rs  basic_disguised.rs  mod.rs
src/proc_macros/: Cargo.toml  _mod.rs  args.rs
tests/: airtight.rs  basic.rs
