# Templated by `cargo-generate` using https://github.com/danielhenrymantilla/proc-macro-template
[lib]
path = "src/_lib.rs"

[package]
name = "seal-the-deal"
authors = [
    "Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>",
]
version = "0.1.0-rc2"  # Keep in sync
edition = "2021"
rust-version = "1.78.0"

license = "Zlib OR MIT OR Apache-2.0"
repository = "https://github.com/danielhenrymantilla/seal-the-deal.rs"
documentation = "https://docs.rs/seal-the-deal"
readme = "README.md"

description = 'Attribute to use on the `trait` methods (or associated functions) that you wish to "seal", a.k.a., render them `final`.'
keywords = [
    "seal", "sealed", "final", "method", "override",
]

[features]
default = [
]

# unstable! Will probably use nightly to improve doc quality
better-docs = []

ui-tests = [
    "better-docs",
]

# `docs-rs` is very similar to `better-docs`, but for it being allowed to enable
# other features as well, often to make sure optional/non-`default` features
# make it to the rendered docs (using `--all-features` instead is not that great).
docs-rs = [
    "better-docs",
]

[dependencies]

[dependencies.seal-the-deal-proc_macros]
path = "src/proc_macros"
version = "=0.1.0-rc2"  # Keep in sync

[dev-dependencies]

[workspace]
members = [
    "src/proc_macros",
]

[package.metadata.docs.rs]
features = [
    "docs-rs",
]
rustdoc-args = [
    # Use (with or without `open`):
    # ```md
    # <details open class="custom"><summary><span class="summary-box"><span>Click to hide</span></span></summary>
    # …
    # </details>
    # ```
    # to get nice drop-down menus (and avoid the css bug with rustdoc).
    "--html-before-content", "fix-docsrs-li-details-summary.html",
]
